themes/default/css/style.css
/*!
 * Clean Blog v1.0.0 (http://startbootstrap.com)
 * Copyright 2014 Start Bootstrap
 * Licensed under MIT
 */
body {
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 20px;
    color: #ebebeb;
    /*background-color: #1b1b1b;*/
	background-color: #0f0f0f;
	overflow-y: scroll;
}
p {
    line-height: 1.5;
    margin: 30px 0;
}
 p a {
     text-decoration: underline
 }
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 800;
	padding-top: 30px;
}
a {
    color: #404040
}
a:hover,
a:focus {
    color: #0085a1
}
a img:hover,
a img:focus {
    cursor: zoom-in
}
blockquote {
    color: #808080;
    font-style: italic;
}
hr.small {
    max-width: 100px;
    margin: 15px auto;
    border-width: 4px;
    border-color: white;
}
.navbar-custom {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 3;
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

 .navbar-custom .navbar-brand {
     font-weight: 800;
	 transition: all 0.5s ease 0.1s;
 }
 .navbar-custom .nav > li > a {
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 800;
     letter-spacing: 1px;
	 transition: all 0.5s ease 0.1s;
 }
 .navbar-custom .nav > li > a:hover,
  .navbar-custom .nav > li > a:focus {
     background:rgba(0,0,0,.5);
 }
.navbar-default .navbar-nav>.open>a,
.navbar-default .navbar-nav>.open>a:hover,
.navbar-default .navbar-nav>.open>a:focus {
    background-color: transparent
}
@media only screen and (min-width: 768px) {
    .navbar-custom {
        background: transparent;
        border-bottom: 1px solid transparent;
    }
     .navbar-custom .navbar-brand {
         color: white;
         padding: 20px;
     }
     .navbar-custom .navbar-brand:hover,
     .navbar-custom .navbar-brand:focus {
         color: #d40052 !important;
     }
     .navbar-custom .nav > li > a {
         color: white;
         padding: 20px;
     }
     .navbar-custom .nav > li > a:hover,
     .navbar-custom .nav > li > a:focus {
         color: #d40052 !important;
         background-color: transparent;
     }
}
@media only screen and (min-width: 1170px) {
    .navbar-custom {
        -webkit-transition: all 0.3s;
        transition: all 0.3s;
    }
    .navbar-custom.is-fixed {
        position: fixed;

    }
     .navbar-custom.is-fixed .navbar-brand {

     }
     .navbar-custom.is-fixed .navbar-brand:hover,
     .navbar-custom.is-fixed .navbar-brand:focus {
         color: #d40052;
     }

     .navbar-custom.is-fixed .nav > li > a {
     }

     .navbar-custom.is-fixed .nav > li > a:hover,
     .navbar-custom.is-fixed .nav > li > a:focus,
     .navbar-custom.is-fixed .nav > li.active > a {
         color: #d40052;
     }
}
.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>li>a:focus,
.navbar-default .navbar-nav>li>a:hover {
    background-color: transparent;
	color: #d40052 !important;
}
.intro-header {
    background-color: #808080;
    background: no-repeat center center;
    background-attachment: scroll;
    background-size: cover;
    padding-bottom: 50px;
    padding-top: 50px;
}
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
     padding: 100px 0 50px;
     color: white;
 }
@media only screen and (min-width: 768px) {
    .intro-header .site-heading,
    .intro-header .post-heading,
    .intro-header .page-heading {
        padding: 150px 0
    }
}
.intro-header .site-heading,
.intro-header .page-heading {
    text-align: center
}
 .intro-header .site-heading h1,
 .intro-header .page-heading h1 {
     margin-top: 0;
     font-size: 50px;
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
     font-size: 24px;
     line-height: 1.1;
     display: block;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 300;
     margin: 10px 0 0;
 }
@media only screen and (min-width: 768px) {
    .intro-header .site-heading h1,
    .intro-header .page-heading h1 {
        font-size: 80px
    }
}
.intro-header .post-heading h1 {
    font-size: 35px

}
.intro-header .post-heading .subheading,
.intro-header .post-heading .meta {
    line-height: 1.1;
    display: block;
}
.intro-header .post-heading .subheading {
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 24px;
    margin: 10px 0 30px;
    font-weight: 600;
}
.intro-header .post-heading .meta {
    font-family: 'Lora', 'Times New Roman', serif;
    font-style: italic;
    font-weight: 300;
    font-size: 20px;
}
 .intro-header .post-heading .meta a {
     color: white
 }
@media only screen and (min-width: 768px) {
    .intro-header .post-heading h1 {
        font-size: 55px
    }
    .intro-header .post-heading .subheading {
        font-size: 30px
    }
}
.post-preview > a {
    color: #404040
}
.post-preview > a:hover,
.post-preview > a:focus {
    text-decoration: none;
    color: #0085a1;
}
.post-preview > a > .post-cover {

	max-height: 300px;
	width: 100%;
	object-fit: cover;
	overflow: hidden;
	position: realtive;
}
.post-preview > a > .post-title {
    font-size: 30px;
    margin-top: 30px;
    margin-bottom: 10px;
}
.post-preview > a > .post-subtitle {
    margin: 0;
    font-weight: 300;
    margin-bottom: 10px;
}
.post-preview > .post-meta {
    color: #808080;
    font-size: 18px;
    font-style: italic;
    margin-top: 0;
}
 .post-preview > .post-meta > a {
     text-decoration: none;
     color: #404040;
 }
 .post-preview > .post-meta > a:hover,
 .post-preview > .post-meta > a:focus {
     color: #0085a1;
     text-decoration: underline;
 }
@media only screen and (min-width: 768px) {
    .post-preview > a > .post-title {
        font-size: 36px
    }
}
/* ... */

